set draft param

--- a/content/blog/2018-05-11-bathing-tapes-vol-one.Rmd
+++ b/content/blog/2018-05-11-bathing-tapes-vol-one.Rmd
@@ -5,6 +5,7 @@ date: '2018-05-11'
 slug: bathing-tapes-vol-one
 tags: ["mixes", "bathing-tapes"]
 cover: https://img.buzzfeed.com/buzzfeed-static/static/2016-09/7/13/asset/buzzfeed-prod-web03/sub-buzz-17815-1473269426-1.jpg
+draft: no
 ---
 
 Last month I recorded a studio mix at home on the 1210s, the first volume of an occasional series for me to share sounds I'm bumping heavy. I'm calling it *bathing tapes* (don't @ me, [Nigo](https://en.wikipedia.org/wiki/Nigo)), 'cos most of the jams won't sound out of place during an extended exfoliation session. but you should enjoy the soothing vibes wherever you're at. Find experimental techno diversions, Houston hip-hop, ethereal footwork waves, bleepy dancehall and more sweet infusions inside.
