--- a/content/blog/linear-programming-fantasy.Rmd
+++ b/content/blog/linear-programming-fantasy.Rmd
@@ -3,6 +3,7 @@ title: "My Linear(ish) Programming Fantasy"
 description: "Applying linear programming principles to the selection of a fantasy football team."
 date: "2017-11-06"
 tags: ["r", "linear-programming", "fpl"]
+draft: no
 ---
 
 ```{r setup, include=FALSE}
