--- a/public/blog/dissecting-euro-football-transfers.Rmd
+++ b/public/blog/dissecting-euro-football-transfers.Rmd
@@ -3,6 +3,7 @@ title: "Unravelling the European Football Transfer Window"
 description: "Scraping data on 2017 football transfers and following the money trails."
 date: "2017-09-07"
 tags: ["r", "football", "web-scraping"]
+draft: no
 ---
 
 ```{r setup, include=FALSE}
