--- a/public/blog/hacking-homelessness-pdf-prisons.Rmd
+++ b/public/blog/hacking-homelessness-pdf-prisons.Rmd
@@ -3,6 +3,7 @@ title: "Hacking Homelessness & PDF Prisons"
 description: "How to extract data from PDFs (in this case, homelessness figures in London), alongside a showcase of algorithmic tesselation of geospatial polygons."
 date: "2017-11-09"
 tags: ["r", "gis", "pdf", "homelessness"]
+draft: no
 ---
 
 ```{r setup, include=FALSE}
