--- a/public/blog/kanye-records-sentiment-analysis.Rmd
+++ b/public/blog/kanye-records-sentiment-analysis.Rmd
@@ -3,6 +3,7 @@ title: "A Sentiment Analysis of Kanye West Records"
 description: "Using the Genius API and sentiment analysis techniques to explore Ye's art."
 date: "2017-03-20"
 tags: ["r", "sentiment-analysis", "kanye-west", "genius"]
+draft: no
 ---
 
 
