--- a/public/blog/meet-dumb-hardwax.Rmd
+++ b/public/blog/meet-dumb-hardwax.Rmd
@@ -3,6 +3,7 @@ title: "Meet Dumb Hardwax"
 description: "The story of my first tweetbot, complete with forays into Azure and Markov Chains."
 date: "2017-10-11"
 tags: ["r", "tweetbot", "azure", "markov-chains"]
+draft: no
 ---
 
 ```{r setup, include=FALSE}
