--- a/content/blog/2018-08-27-building-open-transfer-data.Rmd
+++ b/content/blog/2018-08-27-building-open-transfer-data.Rmd
@@ -1,15 +1,15 @@
 ---
-title: "Building open football transfer data"
+title: "Building open football player transfer data"
 description: "Collating historic data on player transfers to and from football clubs in major European leagues (with some exploratory visualisation thrown in for good measure)."
 date: '2018-08-28'
-slug: building-open-transfer-data
+slug: building-open-football-player-transfer-data
 tags: ["open-data", "football", "data-viz", "r"]
 cover: https://github.com/ewenme/footy-transfer-data/raw/master/figures/chelsea-transfers-web.png
 draft: no
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(warning = FALSE, message = FALSE, echo = FALSE, out.width = '100%', dev = 'png')
+knitr::opts_chunk$set(cache=TRUE, warning = FALSE, message = FALSE, echo = FALSE, out.width = '100%', dev = 'png')
 
 # load packages
 library(readr)
@@ -61,4 +61,4 @@ That's basically it...let me know if you make something `r emo::ji("fire")``r em
 [^scrape]: For this post I chose to omit lengthy passages on web scraping, as not to deter non-programmers (insights can be gleaned from the cleaned data w/o additional code). However, the code used to scrape, clean and analyse the data is publicly available within the `src` directory of the [footy-transfer-data GitHub repo](https://github.com/ewenme/footy-transfer-data), featuring [rvest](https://github.com/hadley/rvest) (web scraping for R) in conjunction with [purrr](https://github.com/tidyverse/purrr) (iteration tools for R).
 [^code]: You can find the R code used to generate this post [here](https://github.com/rbind/ewenme/blob/master/content/blog/2018-09-01-gathering-visualising-open-transfer-data.Rmd).
 [^legal]: Web scraping is a legally/ethically grey area. All effort should be made to verify if scraping a webpage is in accordance with the parent domain's terms of use. A helpful permissions checker for R, [robotstxt](https://github.com/ropensci/robotstxt), is invaluable in this pursuit. Use this (or similar in other languages), or at least study the terms of use for the domain in question closely.
-[^viz]: For the R code used to sketch the chart examples included in the post (and others that didn't make the cut), try [here](https://github.com/ewenme/footy-transfer-data/blob/master/src/02-viz.R)
+[^viz]: For the R code used to sketch the chart examples included in the post (and others that didn't make the cut), try [here](https://github.com/ewenme/footy-transfer-data/blob/master/src/02-viz.R).
