--- a/content/blog/2018-08-27-building-open-transfer-data.Rmd
+++ b/content/blog/2018-08-27-building-open-transfer-data.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Building open football player transfer data"
-description: "Collating historic data on player transfers to and from football clubs in major European leagues (with some exploratory visualisation thrown in for good measure)."
+description: "Collating player transfers to and from football clubs in major European leagues."
 date: '2018-08-27'
 slug: building-open-football-player-transfer-data
 tags: ["open-data", "football", "data-viz", "r"]
