--- a/content/blog/2018-09-17-legends-of-the-mixtape.Rmd
+++ b/content/blog/2018-09-17-legends-of-the-mixtape.Rmd
@@ -3,7 +3,7 @@ title: "Legends of the mixtape"
 description: "A data-driven tribute to the art of the mixtape era glow-up."
 date: '2018-09-17'
 slug: legends-of-the-mixtape
-tags: ["lil-wayne", "d3"]
+tags: ["music", "d3", "r"]
 cover: https://github.com/rbind/ewenme/blob/master/public/img/2018-09-17-legends-of-the-mixtape/datpiff-bubble.png
 draft: no
 ---
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(cache = FALSE, warning = FALSE, message = FALSE, echo = FA
 knitr::include_graphics("/img/2018-09-17-legends-of-the-mixtape/xxx-art.jpg")
 ```
 
-The modern definition of the hip-hop mixtape originates in hip-hop circles of the 2000s, now talking to an artist's independently released projects that act as precursors to "official" full-lengths (albums). [In previous generations](https://www.billboard.com/articles/columns/hip-hop/7669073/history-dj-drama-mixtape-evolution), hip-hop mixtapes were more DJ-led and focused on ingenuity of "chops" and "blends", but the DIY ethos prevailed through the shift towards MCs as main attraction. The dawn of mainstream streaming services and outgoing physical formats has challenged the identity of the mixtape somewhat, but understanding how the artform has reinvented itself around the current climate helps alleviate these concerns somewhat.
+The modern definition of the hip-hop mixtape originates in hip-hop circles of the 2000s, now talking to an artist's independently released projects that act as precursors to "official" full-lengths (albums). [In previous generations](https://www.billboard.com/articles/columns/hip-hop/7669073/history-dj-drama-mixtape-evolution), hip-hop mixtapes were more DJ-led and focused on ingenuity of "chops" and "blends", but the DIY ethos prevailed through the shift towards MCs as main attraction. The dawn of mainstream streaming services and outgoing physical formats has challenged the identity of the mixtape somewhat, but understanding how the art form has reinvented itself around the current climate helps alleviate these concerns somewhat.
 
 Traditionally speaking, the mixtape format means a couple of things. They are usually free, and subsequently avoid copyright issues usually associated with recording techniques like [sampling](https://en.wikipedia.org/wiki/Sampling_(music)) (a hip-hop beatmaker's staple). This helps partly explain why some mixtapes have been accompanied by astonishing groundswells of support in spite of modest investment, why mixtape culture is spoken about in reverential terms and why it continues to be a medium for inspired work - the music is unashamedly open-source in attitude, both practically (transmission to fans i.e. for free) and philosophically (treatment of historic recordings).
 
