--- a/content/blog/2018-09-17-in-search-of-the-mixtape-goat.Rmd
+++ b/content/blog/2018-09-17-in-search-of-the-mixtape-goat.Rmd
@@ -3,7 +3,7 @@ title: "In search of the mixtape GOAT"
 description: "A data-driven tribute to the best of the mixtape era glow-ups."
 date: '2018-09-17'
 slug: in-search-of-the-mixtape-goat
-tags: ["music", "d3", "r"]
+tags: ["music", "data-viz", "d3"]
 cover: https://github.com/rbind/ewenme/raw/master/public/img/2018-09-17-in-search-of-the-mixtape-goat/datpiff-bubble.png
 draft: no
 ---
