--- a/content/blog/2018-05-11-bathing-tapes-vol-one.Rmd
+++ b/content/blog/2018-05-11-bathing-tapes-vol-one.Rmd
@@ -12,7 +12,7 @@ Last month I recorded a studio mix at home on the 1210s, the first volume of an 
 
 <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/434633817&color=%231d191f&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 
-**Stream above or D/L [here](https://dl.dropboxusercontent.com/s/fm2xp2d8hj6ths3/bathing_tapes_vol_one.mp3?dl=0)**
+**PS you can d/l the mix [here](https://dl.dropboxusercontent.com/s/fm2xp2d8hj6ths3/bathing_tapes_vol_one.mp3?dl=1)**
 
 All credit and thank you to the creators of these tracks. Full tracklist over on [soundcloud](https://soundcloud.com/3w3n/bathing-tapes-vol-one) `r emo::ji("eyes")` but some new artists in there you should go check for... [object blue](https://objectblue.carrd.co/), [Ciel](https://soundcloud.com/cl_lit), [DJ Python](https://soundcloud.com/wnkrs) to name a few.
 
