--- a/content/blog/2018-10-11-bathing-tapes-vol-two.Rmd
+++ b/content/blog/2018-10-11-bathing-tapes-vol-two.Rmd
@@ -4,13 +4,38 @@ description: "Next tape up."
 date: '2018-10-11'
 slug: bathing-tapes-vol-two
 tags: ["mixes"]
+image: "https://github.com/rbind/ewenme/raw/master/static/img/artwork/bathing_tapes_vol_two.jpg"
 draft: no
 ---
 
-The latest edition of bathing tapes is out there, recorded at home on a Sunday a couple of months ago. The mix is mostly stuff that came out in the second half of this year that I've been bumping. There's frenetic techno and grime combinations, deviant pop and electro runs, and euphoric breakbeats rubbing against lonely bassweight jams. 
+The latest edition of bathing tapes is out there, recorded at home on a Sunday a couple of months ago. The mix is mostly stuff that came out in the second half of this year that I've been bumping. There's frenetic techno and grime combinations, deviant pop and electro runs, and euphoric breakbeats rubbing against lonely bassweight jams. As always, credit and love to the makers of all this music, filled me up all autumn and beyond.
 
 <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/487675539&color=%23100f0f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 
 **or D/L the mix [here](https://dl.dropboxusercontent.com/s/qgi3kyuuwfn4p23/bathing_tapes_vol_two.mp3?dl=1) and take it outside...**
 
-As always, credit and love to the makers of all this music, filled me up all autumn and beyond. Full tracklist over on [soundcloud](https://soundcloud.com/3w3n/bathing-tapes-vol-two), go peep and support.
+*tracklist*
+
+Pariah, *Rain Soup* [Houndstooth, 2018]  
+Scratcha DVA - *Ikonika Type Beat* [Allyall Records, 2018]  
+67, *Flavours* [6ix 7even, 2018]  
+Blawan, *Klade* [Ternesc, 2018] // Flowdan, *Shell a Verse* [Tru Thoughts, 2018]  
+Skee Mask, *50 Euros to Break Boost* [Ilian Tape, 2018]  
+Cakes Da Killa feat. Rye Rye, *Get to Werk (UNIIQU3 edit)* [UNIIQU3, 2018]  
+Bjarki, *3-1 Tap Lush* [трип, 2018]  
+Ruff Sqwad, *Tings in Boots* [No Hats No Hoods, 2012]  
+SOPHIE, *Immaterial* [Transgressive Records, 2018]  
+Kim English, *Learn 2 Luv (Francois K's Atmospheric Mood - Pearson Sound Remix)* [Nervous
+Records, 2016]  
+Bok Bok, *Silo Pass (Lil Silva Remix)* [Night Slugs, 2018]  
+Ziúr, *Damage-Relate* [Allergy Season x Discwoman, 2018]  
+Playboy Carti, *R.I.P.* [Interscope Records, 2018]  
+Shanti Celeste, *Make Time* [Idle Hands, 2017]  
+Jam City, *Bells* [Jam City, 2014]  
+Rezzett, *Gremlinz* [The Trilogy Tapes, 2018]  
+J.I.D, *NEVER* [Dreamville Records, 2017]  
+S-Type, *Mirror* [LuckyMe, 2018]  
+DJ Richard, *Vanguard* [Dial, 2018]  
+Varoshi Fame, *Voice of Command (Chekov Re-Edit)* [Dekmantel, 2018]  
+Bill Nelson, *The Whole City Between Us* [Music From Memory, 2018]  
+Knxwledge., *12. hurtoknx.* [Knxwledge., 2018]
