--- a/content/blog/2018-09-17-in-search-of-the-mixtape-goat.Rmd
+++ b/content/blog/2018-09-17-in-search-of-the-mixtape-goat.Rmd
@@ -4,7 +4,7 @@ description: "A data-driven tribute to the best of the mixtape era glow-ups."
 date: '2018-09-17'
 slug: in-search-of-the-mixtape-goat
 tags: ["music", "data-viz", "d3"]
-image: https://github.com/rbind/ewenme/raw/master/public/img/2018-09-17-in-search-of-the-mixtape-goat/datpiff-bubble.png
+image: "https://github.com/rbind/ewenme/raw/master/static/img/2018-09-17-in-search-of-the-mixtape-goat/datpiff-bubble.png"
 draft: no
 ---
 
