--- a/content/blog/2018-11-01-readable-accessible-typography-for-blogdown.Rmd
+++ b/content/blog/2018-11-01-readable-accessible-typography-for-blogdown.Rmd
@@ -56,7 +56,7 @@ I also use a grey (rather than black) body-text colour, which is okay on the web
 
 If you use `blogdown` and have been inspired to get creative with type, but you're not web development savvy, read the [Website Basics](https://bookdown.org/yihui/blogdown/website-basics.html) section of Yihui, Amber and Alison's [blogdown: Creating Websites with R Markdown](https://bookdown.org/yihui/blogdown/). This will provide you with the basics of web dev and show you how to use this knowledge to customise Hugo themes.
 
-To tamper with type, we mostly care about [Cascading Stylesheets](https://bookdown.org/yihui/blogdown/css.html) (CSS). For more on CSS, I will again direct you to Yihui et al's wicked book instead of regurgitating the same messages less coherently. Among other things, you'll learn that your Hugo theme (found in the `/themes` folder of your site's repository) usually stores CSS files in a `/static/css` sub-folder, where you can freely edit the complete look and feel of your site. 
+To tamper with type, we mostly care about [Cascading Stylesheets](https://bookdown.org/yihui/blogdown/css.html) (CSS). For more on CSS, I will again direct you to Yihui et al's wicked book instead of regurgitating the same messages less coherently. Also, [Maya Gao](http://mayagao.com/about/) has made a really nice [CSS quick reference site](https://mayagao.github.io/css-quick-reference/) you should remember to visit. Among other things, you'll learn that your Hugo theme (found in the `/themes` folder of your site's repository) usually stores CSS files in a `/static/css` sub-folder, where you can freely edit the complete look and feel of your site. 
 
 If you're lucky (like me), your theme may have a dedicated custom CSS file for "entry-level" edits (e.g. header text colour) - make sure to read your theme's documentation to find out. This is what mine looks like (source [here](https://github.com/rbind/ewenme/blob/master/static/css/custom.css)).
 
