--- a/content/blog/2018-11-03-ewenthemes.Rmd
+++ b/content/blog/2018-11-03-ewenthemes.Rmd
@@ -1,10 +1,10 @@
 ---
 title: "ewenthemes (AKA modding hrbrthemes)"
 description: "Achieve ggplot + website zen."
-date: '2018-11-05'
-slug: ewenthemes-aka-modding-hrbrthemes
+date: '2018-11-03'
+slug: ewenthemes
 tags: ["r", "ggplot2", "typography"]
-draft: yes
+draft: no
 ---
 
 ```{r setup, include=FALSE}
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(cache = FALSE, warning = FALSE, message = FALSE, echo = FA
 
 This post is a short one, (partly) accompanying the last one on [typography for blogodown](https://ewen.io/2018/11/01/readable-accessible-typography-blogdown/). 
 
-If you use [ggplot2](https://ggplot2.tidyverse.org/), you might want to make sure your site's typeface(s) are mirrored in your featured plotting handywork. You could also take this opportunity to develop some custom `ggplot2` theme fluorishes, helping your plots and posts make a charming fit.
+If you use [ggplot2](https://ggplot2.tidyverse.org/), you might want to make sure your site's typeface(s) are mirrored in your featured plotting handy-work. You could also take this opportunity to develop some custom `ggplot2` theme flourishes, helping your plots and posts make a charming fit.
 
 [Bob Rudis](https://rud.is/b/) (AKA [hrbrmstr](https://twitter.com/hrbrmstr)) made perhaps *the* seminal ggplot2 themes package so far, [hrbrthemes](https://hrbrmstr.github.io/hrbrthemes/). [Bob nicely explains](https://hrbrmstr.github.io/hrbrthemes/articles/why_hrbrthemes.html) the opinions that form "what's in the box", chiefly a desire for good typography and minimal chart junk. It's really nice.
 
@@ -31,7 +31,7 @@ ggplot(mtcars, aes(mpg, wt)) +
   theme_ipsum()
 ```
 
-So, I made my own twist of a classic - introducing [ewenthemes](https://github.com/ewenme/ewenthemes). I plan to use/maintain the package to create charts that sit beautifully within posts on the site.
+So, I made my own twist of a classic - introducing [ewenthemes](https://github.com/ewenme/ewenthemes). I plan to use/maintain the package to create charts that sit pretty within posts on the site, by adopting similar design decisions.
 
 ```{r, out.width="100%"}
 library(ggplot2)
@@ -47,6 +47,6 @@ ggplot(mtcars, aes(mpg, wt)) +
   theme_ewen_ws()
 ```
 
-Following Bob's lead, I ship [Work Sans](https://github.com/weiweihuanghuang/Work-Sans) inside the software and include functions to install it on your system with help from `extrafont`. Font handling is surprisingly tricksy in R and this seems to be the best option right now.
+Following Bob's lead, I chose to ship [Work Sans](https://github.com/weiweihuanghuang/Work-Sans) inside the software and include functions to install it on your system with help from `extrafont`. Font handling is surprisingly tricksy in R and this seems to be the best option right now.
 
-The current core themes, `theme_ewen` (Arial Narrow-based) and `theme_ewen_ws` (Work Sans-based) draw heavily from `hrbrthemes`' `theme_ipsum` with some modifications - the chart grid runs on major horizontal lines only, and a thick x-axis line is used by default. Some text properties, notably size and colour, are also modified for better 
+The current core themes, `theme_ewen` (Arial Narrow-based) and `theme_ewen_ws` (Work Sans-based) draw heavily from `hrbrthemes`' `theme_ipsum` with some modifications - the chart grid runs on major horizontal lines only, and a thick x-axis line is used by default. Some text properties, notably size and colour, are also modified for readability on mobile devices. Take a look at the [commit history](https://github.com/ewenme/ewenthemes/commits/master) of `ewenthemes` to see, in detail, what changed from the original package.
