rm old theme. consolidate post tags.

--- a/content/blog/2018-06-07-discogger-day-one.Rmd
+++ b/content/blog/2018-06-07-discogger-day-one.Rmd
@@ -3,7 +3,7 @@ title: "discogger (day one)"
 description: "Building an R interface to the Discogs API."
 date: '2018-06-07'
 slug: discogger-day-one
-tags: ["discogs", "music", "r"]
+tags: ["music", "R"]
 image: https://raw.githubusercontent.com/rbind/ewenme/master/public/blog/2018-06-07-discogger-day-one_files/figure-html/unnamed-chunk-4-1.png
 draft: no
 ---
