--- a/content/blog/2019-01-26-xpoints-translating-probabilistic-metrics-into-fantasy-football-decisions.Rmd
+++ b/content/blog/2019-01-26-xpoints-translating-probabilistic-metrics-into-fantasy-football-decisions.Rmd
@@ -2,7 +2,7 @@
 title: 'xPoints: Translating probabilistic metrics into fantasy football decisions'
 description: ""
 date: '2019-01-26'
-slug: xpoints-translating-probabilistic-metrics-into-fantasy-football-decisions
+slug: xpoints
 tags: ["football", "fpl"]
 draft: yes
 ---
